--- a/style.css
+++ b/style.css
@@ -3,7 +3,12 @@
   height: 40px;
   text-align: center;
   vertical-align: middle;
-  border-width: 5px;
+  border-width: 2px;
   border-color: black;
   font-size: 50px;
+}
+
+.gameboard, .gameboard *{
+  border-collapse: collapse;
+  padding: 0;
 }
